tests/integration/features/file_traceability/error_handling/01_req_references_non_existing_file/test.itest
RUN: %expect_exit 1 %strictdoc export %S --experimental-enable-file-traceability --output-dir Output | filecheck %s --dump-input=fail
CHECK: error: Requirement REQ-001 references a file that does not exist: file.py.
